theme added and nav added